color API remove